--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -28,18 +28,23 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/avatarEditProfileImage"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/avatarEditProfileImage"
+                    android:layout_width="125dp"
+                    android:layout_height="125dp"
+                    android:layout_gravity="center"
+                    tools:srcCompat="@tools:sample/avatars" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">
-
                 <Button
                     android:id="@+id/logOutEditProfileBtn"
                     style="@style/smallMainButtonOther"
@@ -53,9 +58,9 @@
             style="@style/block"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:background="@drawable/block_text"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/nameEditProfileInput"
@@ -111,9 +116,9 @@
 
             <Spinner
                 android:id="@+id/codeEditProfileSpinner"
+                style="@style/mainText"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/mainText"/>
+                android:layout_height="wrap_content" />
 
             <EditText
                 android:id="@+id/phoneEditProfileInput"
