--- a/app/src/main/res/layout/found_service_element.xml
+++ b/app/src/main/res/layout/found_service_element.xml
@@ -10,8 +10,8 @@
     android:padding="10dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_marginEnd="10dp">
 
         <ImageView
@@ -46,6 +46,7 @@
         <RatingBar
             android:id="@+id/ratingBarFondServiceElement"
             style="@android:style/Widget.Holo.RatingBar.Small"
+            android:theme="@style/myRatingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="true"
@@ -62,17 +63,19 @@
         <TextView
             android:id="@+id/serviceNameFoundServiceElementText"
             style="@style/defaultTextMainScreen"
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:gravity="center"
             android:text="Имя сервиса" />
 
         <TextView
             android:id="@+id/costFoundServiceElementText"
             style="@style/defaultTextMainScreen"
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:gravity="center"
             android:text="Цена" />
     </LinearLayout>
 </LinearLayout>
