--- a/app/src/main/res/layout/found_service_profile_element.xml
+++ b/app/src/main/res/layout/found_service_profile_element.xml
@@ -18,7 +18,7 @@
 
     <RatingBar
         android:id="@+id/ratingBarFondServiceProfileElement"
-        style="?android:attr/ratingBarStyleSmall"
+        style="@android:style/Widget.Holo.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
