--- a/app/src/main/res/layout/guest_service.xml
+++ b/app/src/main/res/layout/guest_service.xml
@@ -123,11 +123,17 @@
                         style="@style/mainText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Описание:" />
+                        android:text="Описание:"
+                        android:padding="0dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="10dp"/>
 
                     <TextView
                         android:id="@+id/descriptionGuestServiceText"
                         style="@style/defaultText"
+                        android:padding="0dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
