--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -40,8 +40,8 @@
 
                 <ImageView
                     android:id="@+id/avatarProfileImage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="125dp"
+                    android:layout_height="125dp"
                     android:layout_gravity="center"
                     tools:srcCompat="@tools:sample/avatars" />
 
