--- a/app/src/main/res/layout/top_panel.xml
+++ b/app/src/main/res/layout/top_panel.xml
@@ -19,7 +19,7 @@
 
     <TextView
         android:id="@+id/titleTopPanelText"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
