--- a/app/src/main/res/layout/dialog_element.xml
+++ b/app/src/main/res/layout/dialog_element.xml
@@ -1,24 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dialogElementLayout"
+    style="@style/block"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/block_text"
     android:orientation="horizontal"
+    android:padding="10dp"
     tools:context=".fragments.chatElements.DialogElement">
 
-    <ImageView
-        android:id="@+id/avatarDialogElementImage"
-        android:layout_width="65dp"
-        android:layout_height="20dp"
-        android:layout_weight="1"
-        tools:src="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/nameDialogElementText"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
+        android:layout_height="wrap_content">
 
-        android:text="name text" />
+        <ImageView
+            android:id="@+id/avatarDialogElementImage"
+            android:layout_marginEnd="10dp"
+            android:layout_width="@dimen/photo_avatar_width"
+            android:layout_height="@dimen/photo_avatar_height"
+            tools:src="@tools:sample/avatars" />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/nameDialogElementText"
+            style="@style/mainTextMainScreen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name" />
+
+        <TextView
+            style="@style/defaultTextMainScreen"
+            android:padding="5dp"
+            android:id="@+id/textDialogElementText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="text" />
+    </LinearLayout>
 </LinearLayout>
