--- a/app/src/main/res/layout/dialogs.xml
+++ b/app/src/main/res/layout/dialogs.xml
@@ -6,10 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".chat.Dialogs"
     android:theme="@style/allPages">
-    <ScrollView
+
+    <LinearLayout
+        android:id="@+id/headerDialogsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/headerDialogsLayout">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/headerDialogsLayout"
+        app:layout_constraintBottom_toTopOf="@+id/footerDialogsLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:id="@+id/mainDialogsLayout"
@@ -19,13 +31,7 @@
             android:orientation="vertical" />
     </ScrollView>
 
-    <LinearLayout
-        android:id="@+id/headerDialogsLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent">
-    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/footerDialogsLayout"
