--- a/app/src/main/res/layout/picked_comment.xml
+++ b/app/src/main/res/layout/picked_comment.xml
@@ -1,52 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/block"
+    android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
-    android:orientation="vertical"
-    android:theme="@style/allPages">
+    android:background="@drawable/block_text"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/avatarPickedCommentImage"
+            android:layout_width="@dimen/photo_avatar_width"
+            android:layout_height="@dimen/photo_avatar_height"
+            android:layout_marginEnd="10dp"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/namePickedCommentText"
+                style="@style/mainTextMainScreen"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Имя"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/serviceNamePickedCommentText"
+                style="@style/defaultTextMainScreen"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text=""
+                android:visibility="gone" />
+
+            <RatingBar
+                android:id="@+id/ratingPickedCommentBar"
+                style="@android:style/Widget.Holo.RatingBar.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:stepSize="1"
+                android:theme="@style/myRatingBar" />
+        </LinearLayout>
+
+
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_height="200dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/avatarPickedCommentImage"
-                android:layout_width="50dp"
-                android:layout_height="50dp" />
-            <TextView
-                android:id="@+id/namePickedCommentText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text=" "
-                android:textSize="18sp" />
+            android:layout_margin="10dp">
 
             <TextView
+                android:padding="5dp"
                 android:id="@+id/reviewPickedCommentText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text=" "
-                android:textSize="18sp" />
-
-            <RatingBar
-                android:id="@+id/ratingPickedCommentBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:isIndicator="true" />
-
+                style="@style/defaultTextMainScreen"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="ASD" />
         </LinearLayout>
-
     </ScrollView>
-
 
 
 </LinearLayout>
