--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -107,7 +107,8 @@
         <ScrollView
             android:id="@+id/servicesProfileScroll"
             android:layout_width="match_parent"
-            android:layout_height="200dp">
+            android:layout_height="wrap_content"
+            android:visibility="gone">
 
             <LinearLayout
                 android:id="@+id/servicesProfileLayout"
@@ -120,7 +121,7 @@
         <ScrollView
             android:id="@+id/orderProfileScroll"
             android:layout_width="match_parent"
-            android:layout_height="200dp">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:id="@+id/ordersProfileLayout"
