--- a/app/src/main/res/layout/bottom_panel.xml
+++ b/app/src/main/res/layout/bottom_panel.xml
@@ -1,42 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:layout_height="@dimen/bottom_panel_height"
     android:background="@color/panelColor"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/profileBottomPanelText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_margin="20dp"
-        android:gravity="center"
-        android:background="@color/panelColor"
         style="@style/textItemRegular"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:background="@color/panelColor"
+        android:gravity="center"
         android:text="@string/user" />
 
     <TextView
         android:id="@+id/mainScreenBottomPanelText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:background="@color/panelColor"
         style="@style/textItemSolid"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:background="@color/panelColor"
+        android:gravity="center"
         android:text="@string/mainScreen" />
 
     <TextView
         android:id="@+id/chatBottomPanelText"
+        style="@style/textItemRegular"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:layout_weight="1"
-        android:layout_margin="20dp"
-        android:text="@string/chat"
-        android:gravity="center"
         android:background="@color/panelColor"
-        style="@style/textItemRegular"/>
+        android:gravity="center"
+        android:text="@string/chat" />
 
 </LinearLayout>
